css: add a margin to top to avoid overlap

--- a/public/css/eventbot.css
+++ b/public/css/eventbot.css
@@ -44,6 +44,7 @@ img{
 }
 
 .img-thumbnail {
+	margin-top: 100px;
 	margin-bottom: 5px;
 	max-height: 401px;
 }
